# Planner_App

./: .gitignore  README.md  SPEC.md  planner_config.toml  pyproject.toml
src/planner/: __init__.py  calendar_api.py  cli.py  config.py  db.py
src/planner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_calendar_cli.py  test_calendar_list_cli.py  test_cli.py  test_config.py  test_task_cli.py
